tests/compiler_errors/fn_tests/fn_bad_return_list.tlp
fn foo int -> do drop end